<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">CAREEY</string>
    <string name="error_found">Error</string>
    <string name="network_error">Network error</string>
    <string name="acc_drawer_open">Open</string>
    <string name="acc_drawer_close">Close</string>
    <string name="facebook_app_id">971596306634352</string>
    <string name="fb_login_protocol_scheme">fb971596306634352</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="signup">Sign Up With Email</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_password_title">Forgot Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="mym">myM</string>
    <string name="products">Products</string>
    <string name="restaurant">Restaurant</string>
    <string name="more">More</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="or">OR</string>
    <string name="are_yoi_in_ong">Are You A NGO</string>
    <string name="password_validate_text">Password should contain min of 6 characters and at least 1 lowercase, 1 uppercase and 1 numeric value</string>
    <string name="next">Next</string>
    <string name="get_started">Lets go!</string>
    <string name="welcome_back_guy">Welcome back, Guy!</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="experience_like_never_before">Experience Like Never Before</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="recover_details">Reset code was sent to your email. Please enter\nthe code and create new password.</string>
    <string name="code">Code</string>
    <string name="change_password">Change Password</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="pay">Pay</string>
    <string name="see_my_jobs">See my Jobs</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="languages">Languages</string>
    <string name="portfolio">Portfolio</string>
    <string name="my_services">My Services</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="cancelar">Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="delete_job_text">Are you sure you want to delete this job?</string>
    <string name="block_account">Block Account</string>
    <string name="block_text">Blocked providers cannot see your activities or send you messages.</string>
    <string name="deactivate_description">If you are deactivating your account, make sure that you still have access to the email address you use to login. That way you can easily reactivate your account by logging back in.</string>
    <string name="delete_description">Deleting your account will remove all of your information from our database.
        \nThis can not be undone.</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_job">Delete Job</string>
    <string name="plz_wait">Please Wait</string>
    <string name="select_category">Select Category</string>
    <string name="ok">Ok</string>
    <string name="view_details">View Details</string>
    <string name="policy">"I accept the <a href='http://valeyou.com.br/privacy-policy'>Privacy Policy</a> and <a href='http://valeyou.com.br/privacy-policy'>Terms &amp; Conditions.</a>"</string>
    <string name="otp_text">OTP Verification</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="choose_your_perefered_language">Choose Your Perefered Language</string>
    <string name="select_your_language">Please select your language</string>
    <string name="notifications">Notifications</string>
    <string name="select_language">Select Language</string>
    <string name="blocked_contacts">Blocked Contacts</string>
    <string name="terms">Privacy Policy/ \nTerms and Conditions</string>
    <string name="help_support">Help And Support</string>
    <string name="about_us">About US</string>
    <string name="identity_verfication">Identity Verification</string>
    <string name="my_account">My Account</string>
    <string name="logout_account">Logout</string>
    <string name="viewprofile">View Profile</string>
    <string name="welcome">Welcome,</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="change_language">Change Language</string>
    <string name="distance">Distance</string>
    <string name="distance_any">Distance \nAny+</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="sub_cats">Sub Categories</string>
    <string name="yes">Yes</string>
    <string name="view_on_map">View On Map</string>
    <string name="remotejob">Remote Jobs</string>
    <string name="localjobs">Local Jobs</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="select_city">City</string>
    <string name="select_state">State</string>
    <string name="deactivate_success">Your account is deactivated! Please login back to reactivate.</string>
    <string name="enter_first_name">Please enter first name</string>
    <string name="enter_last_name">Please enter last name</string>
    <string name="enter_email">Please enter email</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="enter_phone_number">Please enter phone number</string>
    <string name="accept_privacy_policy">Please accepts privacy policy</string>
    <string name="enter_password">Please enter password</string>
    <string name="both_password_must_be_matched">Both password must be matched</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_the_otp_you_recive_at">Enter the OTP you recieve to</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="street">Street</string>
    <string name="zip_code">Zip Code</string>
    <string name="description">Description</string>
    <string name="plsease_select_atleast_one_category">Please select atleast one sub category.</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="conf_new_password">Confirm New Password</string>
    <string name="old_password_dosent_match">Old Password does not exist.</string>
    <string name="we_are_here_to_help">We are here to Help!</string>
    <string name="block">Block</string>
    <string name="write_something_here">Write something here</string>
    <string name="you_unblocked">You unblocked </string>
    <string name="you_blocked">You Blocked </string>
    <string name="unblock">Unblock</string>
    <string name="you_blocked_this_user">You blocked this user</string>
    <string name="your_have_blocked">You have blocked!</string>
    <string name="blocked_you"> Blocked you</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="you_must_have_alteast_characters_pass">You must have to enter atleast 6 characters</string>
    <string name="your_password_is_weak">Your password is weak.</string>
    <string name="no">No</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="incorrect_email_password">Incorrect Email and Password</string>
    <string name="rating">Rating</string>
    <string name="state">Region</string>
    <string name="no_of_jobs">No. of jobs</string>
    <string name="payments">Payments</string>
    <string name="no_data_found">No Data Available</string>
    <string name="are_you_sure_you_want_to_logout_from_app">Are you sure you want to logout?</string>
    <string name="messsage">Message</string>
    <string name="type_your_message">Type your message</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="about_me">About me</string>
    <string name="add_language">Add Language</string>
    <string name="seacrh_for_language">Search for Language</string>
    <string name="proficiency">Proficiency</string>
    <string name="select">Select</string>
    <string name="add_profile_project">Add Profile Project</string>
    <string name="title">Title</string>
    <string name="completion_date">Completion Date (Optional)</string>
    <string name="upload_project_photo">Upload Project Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="add_identity">Add Identity</string>
    <string name="edit_identity">Edit Identity</string>
    <string name="please_choose_image">Please choose image</string>
    <string name="password_doesnt_match">password does not match</string>
    <string name="job_status">Job Status : </string>
    <string name="you_have_already_rated_this_job">Note : You have already rated this job</string>
    <string name="please_add_your_rating">Please add your rating.</string>
    <string name="please_write_review">Please write review.</string>
    <string name="all_jobs">All Jobs</string>
    <string name="upcomming">Upcoming</string>
    <string name="cancelled">Canceled</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="invoice">Invoice</string>
    <string name="payment_information">Payment Information</string>
    <string name="amount">Amount</string>
    <string name="service_fee">Service fee</string>
    <string name="total_amount">Total Amount</string>
    <string name="price">Price : </string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="no_bid_yet">No bids yet</string>
    <string name="job_Detail">Job Details</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="the_previous_provider_with_another_job">This provider is busy in another job</string>
    <string name="job_Cancelled">Job Cancelled!</string>
    <string name="click_on_saved_card_to_add_cvv">Click on saved card to add CVV number.</string>
    <string name="car_number_not_valid">Card number not valid</string>
    <string name="expire_date_not_valid">Expire date not valid</string>
    <string name="cvv_not_valid">cvv number not valid</string>
    <string name="card_is_not_valid">card is not valid...</string>
    <string name="payment_done">"Payment done!"</string>
    <string name="saved_cards">SAVED CARDS</string>
    <string name="your_payment_method">YOUR PAYMENT METHOD</string>
    <string name="add_new_card">Add New Card</string>
    <string name="card_number_not_valid">Card number invalid</string>
    <string name="holder_name">Holder Name</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_you_want_to_post_this_job">Are you sure you want to post this job?</string>
    <string name="sign_up_btn_text">Sign Up</string>
    <string name="enter_number_of_hours_to_hire_for">Enter number of hours to hire for?</string>
</resources>